hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80            # The port that the service exposes internally in the cluster
      targetPort: 8080     # The port on the container that the service routes traffic to
